added remote command <--reload/-O> and JSON/XML-RPC method <reload> to reload configuration from disk and reintialize the program; the reload can be performed from web-interface
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@463 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -860,12 +860,14 @@ ul.help > li {
 }
 
 #RPCError,
-#FirstUpdateInfo {
+#FirstUpdateInfo,
+#ConfigReloadInfo {
 	margin-left: 20px;
 	margin-right: 20px;
 }
 
-#FirstUpdateInfo {
+#FirstUpdateInfo,
+#ConfigReloadInfo {
 	margin-top: 20px;
 }
 
@@ -1149,12 +1151,14 @@ body.phone,
 
 .phone #RPCError,
 .phone #FirstUpdateInfo,
+.phone #ConfigReloadInfo,
 .phone #DownloadQueueEmpty  {
 	margin-left: 5px;
 	margin-right: 5px;
 }
 
-.phone #FirstUpdateInfo {
+.phone #FirstUpdateInfo,
+.phone #ConfigReloadInfo {
 	margin-top: 5px;
 }
 
