--- a/webui/style.css
+++ b/webui/style.css
@@ -62,21 +62,23 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 
 #Logo {
 	float: left;
-	margin-top: 2px;
+	margin-top: 1px;
 	margin-right: 5px;
-	opacity: 0.8;
 	width: 39px;
 	height: 36px;
-	background-image: url("./img/extraicons.png");
-	-webkit-background-size: 235px 80px;
-	-moz-background-size: 235px 80px;
-	background-size: 235px 80px;
-	background-position: -2px -39px;
 	cursor: pointer;
 }
 
-#Logo:hover {
-	opacity: 1.0;
+#Logo i:hover {
+	opacity: 1;
+	filter: alpha(opacity=100);
+}
+
+.img-logo {
+	background-position: -48px -80px;
+	width: 39px;
+	height: 36px;
+	display: inline-block;
 }
 
 #PlayBlock {
@@ -89,92 +91,56 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 }
 
 #PlayButton,
-#PauseButton {
-	width: 40px;
-	height: 40px;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-	border-radius: 20px;
-	-webkit-box-shadow: inset 0 0 3px #666, 0 0 9px #333;
-	-moz-box-shadow: inset 0 0 3px #666, 0 0 9px #333;
-	box-shadow: inset 0 0 3px #666, 0 0 9px #333;
+#PauseButton,
+#PlayPauseBg {
+	width: 50px;
+	height: 50px;
 	position: absolute;
-	left: 0;
-	top: 0;
 	padding: 0;
-	padding-bottom: 1px; /* required for Chrome for better centering of image */
 	z-index: 3;
 }
 
-#PauseButton {
-	background-color: #2b2;
-	border: 0;
-	background-image: rgb(180,227,145); /* Old browsers */
-	background-image: -moz-linear-gradient(top,  rgba(180,227,145,1) 0%, rgba(97,196,25,1) 50%, rgba(180,227,145,1) 100%); /* FF3.6+ */
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(180,227,145,1)), color-stop(50%,rgba(97,196,25,1)), color-stop(100%,rgba(180,227,145,1))); /* Chrome,Safari4+ */
-	background-image: -webkit-linear-gradient(top,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* Chrome10+,Safari5.1+ */
-	background-image: -o-linear-gradient(top,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* Opera 11.10+ */
-	background-image: -ms-linear-gradient(top,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* IE10+ */
-	background-image: linear-gradient(to bottom,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* W3C */
+.img-download-orange {
+	background-position: -176px -80px;
 }
 
-#PauseButton:hover,
-.hover #PauseButton {
-	background-position: 0 0;
-	border: 0;
-	background-image: rgb(205,236,182); /* Old browsers */
-	background-image: -moz-linear-gradient(top,  rgba(205,236,182,1) 0%, rgba(148,233,87,1) 50%, rgba(205,236,182,1) 100%); /* FF3.6+ */
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(205,236,182,1)), color-stop(50%,rgba(148,233,87,1)), color-stop(100%,rgba(205,236,182,1))); /* Chrome,Safari4+ */
-	background-image: -webkit-linear-gradient(top,  rgba(205,236,182,1) 0%,rgba(148,233,87,1) 50%,rgba(205,236,182,1) 100%); /* Chrome10+,Safari5.1+ */
-	background-image: -o-linear-gradient(top,  rgba(205,236,182,1) 0%,rgba(148,233,87,1) 50%,rgba(205,236,182,1) 100%); /* Opera 11.10+ */
-	background-image: -ms-linear-gradient(top,  rgba(205,236,182,1) 0%,rgba(148,233,87,1) 50%,rgba(205,236,182,1) 100%); /* IE10+ */
-	background-image: linear-gradient(to bottom,  rgba(205,236,182,1) 0%,rgba(148,233,87,1) 50%,rgba(205,236,182,1) 100%); /* W3C */
+.img-download-green {
+	background-position: -112px -80px;
 }
 
-#PlayButton {
-	background-color: #faa732;
-	border: 0;
-	background-image: rgb(255,175,75); /* Old browsers */
-	background-image: -moz-linear-gradient(top,  rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%); /* FF3.6+ */
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,175,75,1)), color-stop(100%,rgba(255,146,10,1))); /* Chrome,Safari4+ */
-	background-image: -webkit-linear-gradient(top,  rgba(255,175,75,1) 0%,rgba(255,146,10,1) 100%); /* Chrome10+,Safari5.1+ */
-	background-image: -o-linear-gradient(top,  rgba(255,175,75,1) 0%,rgba(255,146,10,1) 100%); /* Opera 11.10+ */
-	background-image: -ms-linear-gradient(top,  rgba(255,175,75,1) 0%,rgba(255,146,10,1) 100%); /* IE10+ */
-	background-image: linear-gradient(to bottom,  rgba(255,175,75,1) 0%,rgba(255,146,10,1) 100%); /* W3C */
+.img-download-bg {
+	background-position: -240px -80px;
+	width: 50px;
+	height: 50px;
 }
 
-#PlayButton:hover,
-.hover #PlayButton {
-	background-position: 0 0;
-	border: 0;
-	background-image: rgb(255,203,139); /* Old browsers */
-	background-image: -moz-linear-gradient(top,  rgba(255,203,139,1) 0%, rgba(255,184,97,1) 100%); /* FF3.6+ */
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,203,139,1)), color-stop(100%,rgba(255,184,97,1))); /* Chrome,Safari4+ */
-	background-image: -webkit-linear-gradient(top,  rgba(255,203,139,1) 0%,rgba(255,184,97,1) 100%); /* Chrome10+,Safari5.1+ */
-	background-image: -o-linear-gradient(top,  rgba(255,203,139,1) 0%,rgba(255,184,97,1) 100%); /* Opera 11.10+ */
-	background-image: -ms-linear-gradient(top,  rgba(255,203,139,1) 0%,rgba(255,184,97,1) 100%); /* IE10+ */
-	background-image: linear-gradient(to bottom,  rgba(255,203,139,1) 0%,rgba(255,184,97,1) 100%); /* W3C */
+.PlayBlockInner {
+	width: 38px;
+	height: 38px;
+	margin-left: 0px;
+	margin-top: 0px;
+	cursor: pointer;
+	top: 6px;
+	left: 6px;
+	position: absolute;
+	-webkit-border-radius: 18px;
+	-moz-border-radius: 18px;
+	border-radius: 18px;
 }
 
-#PlayButton .img-download,
-#PauseButton .img-download {
+.img-download-btn {
+	background-position: -16px -80px;
 	width: 21px;
 	height: 21px;
-	margin-left: 10px;
-	opacity: 0.90;
-	background-image: url("./img/extraicons.png");
-	background-position: 0px -50px;
+	margin-left: 9px;
+	margin-top: 8px;
 }
 
-/* HiDPI screens */
-@media only screen and (-webkit-min-device-pixel-ratio: 2) {
-	#PlayButton .img-download,
-	#PauseButton .img-download {
-		-webkit-background-size: 235px 80px;
-		-moz-background-size: 235px 80px;
-		background-size: 235px 80px;
-		background-position: -12px -15px;
-	}
+.PlayBlockInner:hover .img-download-btn,
+.PlayBlockInner:hover .img-download-btn {
+	/* white */
+	background-position: -16px -112px;
+	opacity: 0.9;
 }
 
 #PlayCaretBlock {
@@ -225,7 +191,6 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 	z-index: 4;
 	left: -5px;
 	top: -5px;
-	*background-image: url("./img/download-anim-gray-2x.png");
 	-webkit-background-size: 70px 70px;
 	-moz-background-size: 70px 70px;
 	background-size: 70px 70px;
@@ -267,10 +232,8 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 	color: #fff;
 }
 
-#StatusSpeedBlock.speedlimit i.icon-plane.icon-white {
-	/* turtle icon */
-	background-image: url("./img/extraicons.png");
-	background-position: -144px 0;
+#InfoBlock i {
+	margin-right: 1px;
 }
 
 .navbar-inner i {
@@ -396,7 +359,7 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 
 .search-clear {
 	position: absolute;
-	top: 7px;
+	top: 6px;
 	right: 9px;
 	cursor: pointer;
 	opacity: 0.65;
@@ -419,6 +382,153 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 #ToolbarOptMenu {
 	min-width: 215px;
 }
+
+/* BEGIN: Icons */
+[class^="icon-"],
+[class*=" icon-"],
+[class^="img-"],
+[class*=" img-"] {
+	background-image: url("./img/icons.png");
+}
+
+/* HiDPI screens */
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+	[class^="icon-"],
+	[class*=" icon-"],
+	[class^="img-"],
+	[class*=" img-"] {
+		background-image: url("./img/icons-2x.png");
+		-webkit-background-size: 512px 136px;
+		-moz-background-size: 512px 136px;
+		background-size: 512px 136px;
+	}
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+	display: inline-block;
+	vertical-align: text-top;
+	width: 16px;
+	height: 16px;
+	line-height: 16px;
+}
+
+.icon-plus {
+	background-position: -16px -16px;
+}
+
+.icon-remove-white {
+	background-position: -48px -16px;
+}
+
+.icon-ok {
+	background-position: -80px -16px;
+}
+
+.icon-time {
+	background-position: -112px -16px;
+}
+
+.icon-file {
+	background-position: -144px -16px;
+}
+
+.icon-messages {
+	background-position: -176px -16px;
+}
+
+.icon-play {
+	background-position: -208px -16px;
+}
+
+.icon-pause {
+	background-position: -240px -16px;
+}
+
+.icon-down {
+	background-position: -272px -16px;
+}
+
+.icon-up {
+	background-position: -304px -16px;
+}
+
+.icon-bottom {
+	background-position: -336px -16px;
+}
+
+.icon-top {
+	background-position: -368px -16px;
+}
+
+.icon-refresh {
+	background-position: -16px -48px;
+}
+
+.icon-edit {
+	background-position: -48px -48px;
+}
+
+.icon-trash {
+	background-position: -80px -48px;
+}
+
+.icon-settings {
+	background-position: -112px -48px;
+}
+
+.icon-downloads {
+	background-position: -144px -48px;
+}
+
+.icon-plane {
+	background-position: -176px -48px;
+}
+
+.icon-truck {
+	background-position: -208px -48px;
+}
+
+.icon-history {
+	background-position: -240px -48px;
+}
+
+.icon-remove {
+	background-position: -272px -48px;
+}
+
+.icon-merge {
+	background-position: -304px -48px;
+}
+
+.icon-trash-white {
+	background-position: -336px -48px;
+}
+
+.icon-downloads-white {
+	background-position: -368px -48px;
+}
+
+.icon-history-white {
+	background-position: -400px -48px;
+}
+
+.icon-settings-white {
+	background-position: -432px -48px;
+}
+
+.icon-messages-white {
+	background-position: -464px -48px;
+}
+
+.img-checkmark {
+	background-position: -432px -16px;
+}
+
+.img-checkminus {
+	background-position: -400px -16px;
+}
+/* END: Icons */
 
 .btn-toolbar {
 	margin-top: 6px;
@@ -580,18 +690,16 @@ div.check:hover {
 	border: 1px solid #0088cc;
 }
 
-tr.checked  div.check {
-	background-image: url("./img/extraicons.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-position: -73px -1px;
+table.table-cancheck tr  div.img-check {
+	background-position: 200px 200px;
 }
 
-tr.checkremove div.check {
-	background-image: url("./img/extraicons.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-position: -48px -1px;
+table.table-cancheck tr.checked  div.img-check {
+	background-position: -434px -18px;
+}
+
+table.table-cancheck tr.checkremove div.img-check {
+	background-position: -402px -18px;
 }
 
 tr.checked,
@@ -667,32 +775,6 @@ tr.checked  td {
 .input-append .add-on-small {
 	font-size: 11px;
 }
-
-/* BEGIN: Extra Icons */
-.icon-extra {
-	background-image: url("./img/extraicons.png");
-}
-
-.icon-move-top {
-	background-position: 0 0;
-}
-
-.icon-move-bottom {
-	background-position: -24px 0;
-}
-
-.icon-checkmark {
-	background-position: -96px 0;
-}
-
-.icon-checkclear {
-	background-position: -120px 0;
-}
-
-.icon-turtle {
-	background-position: -144px 0;
-}
-/* END: Extra Icons */
 
 .toolbtn {
 	min-width: 56px;
@@ -1018,6 +1100,11 @@ div.ConfigFooter {
 	padding-bottom: 12px;
 }
 
+#ConfigContent div.control-group.last-group,
+#ConfigContent.search div.control-group.last-group.multiset {
+	border-bottom: none;
+}
+
 #ConfigContent div.control-group.multiset {
 	border-bottom: none;
 	margin-bottom: 12px;
@@ -1204,9 +1291,24 @@ body.phone,
     padding: 4px 4px 6px;
 }
 
-.phone .navbar .nav > li.active > a > i {
-	/* icon-black */
-	background-image: url("../img/glyphicons-halflings.png");
+.phone .navbar .nav > li.active > #DownloadsTabLink > i {
+	/* icon-downloads (black) */
+	background-position: -144px -48px;
+}
+
+.phone .navbar .nav > li.active > #HistoryTabLink > i {
+	/* icon-history (black) */
+	background-position: -240px -48px;
+}
+
+.phone .navbar .nav > li.active > #MessagesTabLink > i {
+	/* icon-messages (black) */
+	background-position: -176px -16px;
+}
+
+.phone .navbar .nav > li.active > #ConfigTabLink > i {
+	/* icon-settings (black) */
+	background-position: -112px -48px;
 }
 
 .phone .navbar .btn-toolbar .btn {
@@ -1233,7 +1335,7 @@ body.phone,
 }
 
 .phone .search-clear {
-	top: 10px;
+	top: 9px;
 }
 
 /* DATATABLE */
@@ -1291,11 +1393,9 @@ body.phone,
 	border-radius: 3px;
 }
 
-.phone tr.checked  div.check {
-	background-image: url("./img/extraicons.png");
-	background-position:center;
-	background-repeat: no-repeat;
-	background-position: -64px 8px;
+.phone table.table-cancheck tr.checked  div.img-check {
+	/* icon-OK */
+	background-position: -74px -10px;
 }
 
 /* SPECIAL TABLE STYLES */
