--- a/webui/style.css
+++ b/webui/style.css
@@ -556,7 +556,8 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 	margin-bottom: 0px;
 }
 
-.section-toolbar {
+.section-toolbar,
+.modal-toolbar {
 	margin-top: 0;
 	margin-bottom: 7px;
 }
@@ -566,7 +567,7 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 }
 
 .label {
-	vertical-align: text-top;
+	/* -ms-padding-bottom: 1px; */
 }
 
 .label-status {
@@ -576,14 +577,11 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 /* links in black color */
 .datatable a {
 	color: #000000;
-	*border-bottom: 1px dashed #999999;
 }
 
 /* links in black color */
 .datatable a:hover {
 	color: #000000;
-	*text-decoration: none;
-	*border-bottom: 1px solid #000000;
 }
 
 table.datatable > tbody > tr > td {
@@ -620,6 +618,10 @@ div.toolbox-length select {
 	line-height: 26px;
 }
 
+.modal-tab .pagination {
+	margin-bottom: 10px;
+}
+
 h1 {
 	font-size: 24px;
 	line-height: 36px;
@@ -654,6 +656,35 @@ form {
 
 #DownloadsEdit_PostParamData {
 	padding-bottom: 1px;
+}
+
+#DownloadsEdit_FileTable_filter,
+#DownloadsEdit_LogTable_filter {
+	width: 180px;
+}
+
+.loading-block {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	text-align: center;
+}
+
+.loading-block img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+
+.modal-inner-scroll {
+	bottom: 0;
+	left: 15px;
+	overflow-y: auto;
+	position: absolute;
+	right: 0;
+	padding-right: 15px;
 }
 
 /* BEGIN: Tables */
@@ -870,6 +901,10 @@ tr.checked  td {
 }
 /* END: override bootstrap styles for modals */
 
+.modal-bottom-toolbar .btn {
+	margin-top: 12px;
+}
+
 /* based on uneditable-input */
 .uneditable-mulitline-input {
   display: inline-block;
@@ -1002,13 +1037,15 @@ ul.help > li {
 
 #RPCError,
 #FirstUpdateInfo,
-#ConfigReloadInfo {
+#ConfigReloadInfo,
+.unsupported-browser {
 	margin-left: 20px;
 	margin-right: 20px;
 }
 
 #FirstUpdateInfo,
-#ConfigReloadInfo {
+#ConfigReloadInfo,
+.unsupported-browser {
 	margin-top: 20px;
 }
 
@@ -1064,8 +1101,6 @@ ul.help > li {
 #ConfigContent .config-header {
 	font-size: 16px;
 	font-weight: bold;
-	*background-color: #505050;
-	*color: #ffffff;
 	padding: 7px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
@@ -1078,7 +1113,6 @@ ul.help > li {
 #ConfigTitle {
 	margin-top: 15px;
 	margin-right: 15px;
-	*padding-bottom: 8px;
 }
 
 .config-search {
@@ -1086,9 +1120,6 @@ ul.help > li {
 }
 
 #ConfigContent span.help-option-title {
-	*font-weight: bold;
-    *font-style:italic;
-	*color: #000;
 	color: #8D1212;
 }
 
@@ -1129,10 +1160,6 @@ div.ConfigFooter {
 	margin: 15px 0;
 }
 
-#ConfigContent fieldset > div:nth-child(odd) {
-	*background-color: #f8f8f8;
-}
-
 .config-settitle {
 	font-size: 14px;
 	font-weight: bold;
@@ -1149,7 +1176,6 @@ div.ConfigFooter {
 .config-multicaption {
 	color: #c0c0c0;
 	font-weight: normal;
-	*display: none;
 }
 
 #ConfigContent div.control-group,
@@ -1509,7 +1535,6 @@ body.phone,
 }
 
 .phone .datatable .label {
-	*vertical-align: baseline;
 	line-height: 21px;
 }
 
