--- a/webui/style.css
+++ b/webui/style.css
@@ -1,21 +1,21 @@
 /*!
- *	This file is part of nzbget
+ * This file is part of nzbget
  *
- *	Copyright (C) 2012 Andrey Prygunkov <hugbug@users.sourceforge.net>
+ * Copyright (C) 2012 Andrey Prygunkov <hugbug@users.sourceforge.net>
  *
- *	This program is free software; you can redistribute it and/or modify
- *	it under the terms of the GNU General Public License as published by
- *	the Free Software Foundation; either version 2 of the License, or
- *	(at your option) any later version.
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
  *
- *	This program is distributed in the hope that it will be useful,
- *	but WITHOUT ANY WARRANTY; without even the implied warranty of
- *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	See the
- *	GNU General Public License for more details.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
  *
- *	You should have received a copy of the GNU General Public License
- *	along with this program; if not, write to the Free Software
- *	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA	 02110-1301, USA.
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  *
  * $Revision$
  * $Date$
@@ -1035,7 +1035,7 @@ ul.help > li {
 	z-index: inherit;
 }
 
-#RPCError,
+#ErrorAlert,
 #FirstUpdateInfo,
 #ConfigReloadInfo,
 .unsupported-browser {
@@ -1043,6 +1043,7 @@ ul.help > li {
 	margin-right: 20px;
 }
 
+#ErrorAlert,
 #FirstUpdateInfo,
 #ConfigReloadInfo,
 .unsupported-browser {
@@ -1113,10 +1114,6 @@ ul.help > li {
 #ConfigTitle {
 	margin-top: 15px;
 	margin-right: 15px;
-}
-
-.config-search {
-	margin-top: 5px;
 }
 
 #ConfigContent span.help-option-title {
@@ -1218,8 +1215,28 @@ div.ConfigFooter {
 
 .option {
 	font-weight: bold;
-    font-style:italic;
+	font-style:italic;
 	color: inherit;
+}
+
+.option-name,
+.option-name:focus,
+.option-name:hover {
+	color: inherit;
+	outline: 0;
+	cursor: inherit;
+	text-decoration: none;
+}
+
+.search .option-name,
+.search .option-name:focus {
+	cursor: pointer;
+}
+
+.search .option-name:hover {
+	cursor: pointer;
+	text-decoration: underline;
+	color: #005580;
 }
 
 /* table "LIST OF ALL OPTIONS" */
@@ -1321,7 +1338,7 @@ body.phone,
 	padding-right: 5px;
 }
 
-.phone #RPCError,
+.phone #ErrorAlert,
 .phone #FirstUpdateInfo,
 .phone #ConfigReloadInfo,
 .phone #DownloadQueueEmpty  {
