history dialog now shows status of every script
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@644 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -1,7 +1,7 @@
 /*!
  * This file is part of nzbget
  *
- * Copyright (C) 2012 Andrey Prygunkov <hugbug@users.sourceforge.net>
+ * Copyright (C) 2012-2013 Andrey Prygunkov <hugbug@users.sourceforge.net>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -588,6 +588,10 @@ body.navfixed.scrolled .navbar-fixed-top .navbar-inner {
 
 .label-status {
 	text-transform: uppercase;
+}
+
+.controls .label-status {
+	line-height: 22px;
 }
 
 /* links in black color */
@@ -1396,6 +1400,10 @@ body.phone,
 	font-size: 18px;
 	line-height: 24px;
 	height: inherit;
+}
+
+.phone .controls .label-status {
+	line-height: 28px;
 }
 
 .phone .menu-header {
