added setting of post-processing parameters for history items; pp-parameters can now be viewed and changed in history dialog in web-interface; useful before post-processing again; new action <HistorySetParameter> in RPC-method <editqueue>; new action <O> in remote command <--edit/-E> for history items (subcommand <H>)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@683 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -674,7 +674,8 @@ form {
 	margin-bottom: 0px;
 }
 
-#DownloadsEdit_PostParamData {
+#DownloadsEdit_PostParamData,
+#HistoryEdit_PostParamData {
 	padding-bottom: 1px;
 }
 
@@ -1228,6 +1229,7 @@ div.ConfigFooter {
 }
 
 #DownloadsEdit_ParamTab div.control-group.wants-divider,
+#HistoryEdit_ParamTab div.control-group.wants-divider,
 #ConfigContent div.control-group,
 #ConfigContent.search div.control-group.multiset {
 	border-bottom: 1px solid #eeeeee;
