added functions to backup and restore settings from web-interface; when restoring it's possible to choose what sections to restore (for example only news servers settings or only settings of a certain pp-script) or restore the whole configuration
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@698 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -986,7 +986,7 @@ ul.help > li {
 }
 
 /* Make "select files" native control invisible */
-#AddDialog_Input {
+.hidden-file-input {
 	position: absolute;
 	left: 0;
 	top: 0;
