added filter buttons (all, new, fetched, backlog) to feed view dialog
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@736 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -756,6 +756,12 @@ form {
 	margin-bottom: 10px;
 }
 
+.badge-primary {
+    background-color: #FFFFFF;
+    color: #000000;
+    text-shadow: none;
+}
+
 /* BEGIN: Tables */
 .table {
     margin-bottom: 0px;
