--- a/webui/style.css
+++ b/webui/style.css
@@ -749,6 +749,11 @@ form {
   max-height: 360px;
 }
 
+.modal-body .alert {
+	margin-bottom: 0px;
+	padding: 6px;
+}
+
 .modal-max {
 	margin: 15px;
 	left: 0;
