addition to r757: fixed: statistic dialog had a scroll bar
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@763 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -749,6 +749,10 @@ form {
   max-height: 360px;
 }
 
+.modal.no-footer .modal-body {
+  max-height: 400px;
+}
+
 .modal-body .alert {
 	margin-bottom: 0px;
 	padding: 6px;
