small changes in button captions: edit dialogs called from settings page (choose script, choose order, build rss filter) now have buttons "Discard/Apply" instead of "Close/Save"; in all other dialogs button "Close" renamed to "Cancel" unless it was the only button in dialog
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@769 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -750,11 +750,15 @@ form {
 }
 
 .modal-body {
-  max-height: 360px;
+	max-height: 360px;
 }
 
 .modal.no-footer .modal-body {
-  max-height: 400px;
+	max-height: 400px;
+}
+
+.modal-footer .btn-primary {
+	min-width: 40px;
 }
 
 .modal-body .alert {
@@ -1084,8 +1088,8 @@ table.table-hidecheck tbody > tr > td:first-child {
 }
 
 .modal-mini {
-  width: 400px;
-  margin-left:-200px;
+  width: 420px;
+  margin-left:-210px;
 }
 
 .modal-small {
