added filter buttons to messages tab (info, warning, etc.); also changed the color of filter buttons in feed view and feed filter dialogs (from blue to black)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@778 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -809,7 +809,7 @@ form {
 	margin-bottom: 10px;
 }
 
-.badge-primary {
+.badge-active {
     background-color: #FFFFFF;
     color: #000000;
     text-shadow: none;
