added collecting of server usage statistical data for each download: number of successful and failed article downloads per news server; new page in history dialog shows collected statistics; new fields in RPC-method "history": ServerStats (array), TotalArticles, SuccessArticles, FailedArticles; new env. vars passed to pp-scripts: NZBPP_TOTALARTICLES, NZBPP_SUCCESSARTICLES, NZBPP_FAILEDARTICLES and per used news server: NZBPP_SERVERX_SUCCESSARTICLES, NZBPP_SERVERX_FAILEDARTICLES; also new env.vars: DELETED, HEALTHDELETED
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@794 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -652,12 +652,12 @@ ul.dropdown-menu > li > a > i {
 }
 
 /* links in black color */
-.datatable a {
+.table a {
 	color: #000000;
 }
 
 /* links in black color */
-.datatable a:hover {
+.table a:hover {
 	color: #000000;
 }
 
@@ -697,6 +697,11 @@ div.toolbox-length select {
 
 .modal-tab .pagination {
 	margin-bottom: 10px;
+}
+
+.padded-tab {
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 h1 {
@@ -1241,8 +1246,12 @@ ul.help > li {
 	text-align: left;
 }
 
+.data-statistics-full {
+	width: 364px;
+}
+
 .data-statistics {
-	width: 280px;
+	width: 290px;
 }
 
 .modal-center {
