improved duplicate check: when history item expires (as defined by option "KeepHistory") and the duplicate check is active (option "DupeCheck") the item is not completely deleted from history; instead the amount of stored data reduces to minimum required for duplicate check (about 150 bytes vs 2000 bytes for full history item); such old history items are not shown in web-interface by default (to avoid transferring of large amount of history items); new button "Old" in web-interface to show old history items; the items are marked with badge "DUP";
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@816 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -622,6 +622,10 @@ ul.dropdown-menu > li > a > i {
 	background-position: -400px -144px;
 }
 
+.icon-duplicates-white {
+	background-position: -432px -144px;
+}
+
 /* END: Icons */
 
 .btn-toolbar {
