history records can now be either permanently deleted or just hidden from history list; hiding (instead of deleting) is recommended for proper work of duplicate handling; in addition it is now possible to delete downloaded files; RPC-method "editqueue" has now four actions to delete history records: "HistoryDelete", "HistoryDeleteCleanup", "HistoryFinalDelete", "HistoryFinalDeleteCleanup"; action "HistoryDelete" which has existed before now hides records, already hidden records are ignored; button "Old" in web-interface on history tab renamed to "Hidden"; badge "DUP", used to distinguish old history records changed to "hidden"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@868 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -618,11 +618,11 @@ ul.dropdown-menu > li > a > i {
 	background-position: -368px -144px;
 }
 
-.icon-not-duplicates {
+.icon-mask {
 	background-position: -400px -144px;
 }
 
-.icon-duplicates-white {
+.icon-mask-white {
 	background-position: -432px -144px;
 }
 
