increased width of Update-dialog to accommodate 80 character columns; this improves output of console tools like wget relying on standard terminal width
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@887 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -1565,6 +1565,11 @@ div.control-group.last-group {
 	background-color: #ffffff;
 }
 
+#UpdateProgressDialog {
+	width: 640px;
+	margin-left: -320px;
+}
+
 #UpdateProgressDialog .modal-body {
 	min-height: 280px;
 	position: relative;
